--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
         "@inertiajs/vue3": "^1.0.14",
+        "@mux/upchunk": "^3.5.0",
         "@vitejs/plugin-vue": "^4.4.0",
         "momentum-modal": "^0.2.1",
         "ziggy-js": "^1.8.1"
