--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/vue3": "^1.0.14",
         "@mux/upchunk": "^3.5.0",
         "@vitejs/plugin-vue": "^4.4.0",
+        "lodash.debounce": "^4.0.8",
         "momentum-modal": "^0.2.1",
         "ziggy-js": "^1.8.1"
     }
